<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:checked="true"
            android:title="@string/main"/>
        <item
            android:id="@+id/tool"
            android:checked="true"
            android:title="@string/toolbar"/>
        <item
            android:id="@+id/fab"
            android:checked="true"
            android:title="@string/fab"/>
        <item
            android:id="@+id/collapse"
            android:checked="true"
            android:title="@string/collapse"/>
        <item
            android:id="@+id/navigation"
            android:checked="true"
            android:title="@string/nav"/>

    </group>

</menu>